# bme-prog1-nhf-clion

./: CMakeLists.txt  README.md  ablakkezeles.c  ablakkezeles.h  board.c  board.h  fajlkezeles.c  fajlkezeles.h  icon.rc  jatek.c  jatek.h  jatek_megjelenites.c  jatek_megjelenites.h  main.c  main.h  menu.c  menu.h  menuterv.xcf
